# tf-demos-viewer

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/: index.js  index.ts  parser.ts  test.ts
src/: lib.rs  state.rs
static/: index.html
wasm/: Cargo.toml
wasm/src/: lib.rs  state.rs
