[package]
name = "tf-demos-viewer"
description = "JS bindings for demo parser"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3 # demo parsing is slow

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
#wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
web-sys = { version = "0.3.22", features = ["console"] }
js-sys = "0.3.22"
tf-demo-parser = { version = "0.4", git = "https://github.com/demostf/parser" }
#tf-demo-parser = { version = "0.4", path = "../tf-demo-parser" }

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
