[package]
name = "tf-demos-viewer"
description = "JS bindings for demo parser"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3 # demo parsing is slow

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
#wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]

[dependencies]
wasm-bindgen = "0.2.96"
wee_alloc = { version = "0.4.2", optional = true }
web-sys = { version = "0.3.22", features = ["console"] }
js-sys = "0.3.22"
tf-demo-parser = { version = "0.5.1", path = "../tf-demo-parser" }

